src/main/java/parser/JavaProgramParser.java
// Generated from /Users/emgariko/work/itmo/translation_methods/lab3/src/main/java/parser/JavaProgram.g4 by ANTLR 4.9.2
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaProgramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SKIP_WHITESPACES=1, RETURN_KEYWORD=2, BOOL_TRUE=3, BOOL_FALSE=4, WHILE=5, 
		NEW=6, JAVA_PACKAGE=7, JAVA_IMPORT=8, CLASS=9, EXTENDS=10, IMPLEMENTS=11, 
		ACCESS_MODIFIER=12, STATIC=13, FINAL=14, WORD=15, INT=16, ASSIGN=17, SEMICOLON=18, 
		LBRACKET=19, RBRACKET=20, COMMA=21, QUOTE=22, DOT=23, LEFT_BRACE=24, RIGHT_BRACE=25, 
		LE=26, GR=27, EQ=28, LEQ=29, GEQ=30;
	public static final int
		RULE_program = 0, RULE_java_package = 1, RULE_java_imports = 2, RULE_class_definition = 3, 
		RULE_java_extends = 4, RULE_java_implements = 5, RULE_class_body = 6, 
		RULE_class_member = 7, RULE_variable = 8, RULE_variable_type = 9, RULE_method = 10, 
		RULE_acceess_modifier = 11, RULE_static_modifier = 12, RULE_final_modifier = 13, 
		RULE_method_body = 14, RULE_value = 15, RULE_string = 16, RULE_int_value = 17, 
		RULE_method_call = 18, RULE_dot_separated_words = 19, RULE_args = 20, 
		RULE_new_call = 21, RULE_while_loop = 22, RULE_cond = 23, RULE_bool_value = 24, 
		RULE_comp = 25, RULE_return_keyword = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "java_package", "java_imports", "class_definition", "java_extends", 
			"java_implements", "class_body", "class_member", "variable", "variable_type", 
			"method", "acceess_modifier", "static_modifier", "final_modifier", "method_body", 
			"value", "string", "int_value", "method_call", "dot_separated_words", 
			"args", "new_call", "while_loop", "cond", "bool_value", "comp", "return_keyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'return'", "'true'", "'false'", "'while'", "'new'", "'package'", 
			"'import'", "'class'", "'extends'", "'implements'", null, "'static'", 
			"'final'", null, null, "'='", "';'", "'('", "')'", "','", "'\"'", "'.'", 
			"'{'", "'}'", "'<'", "'>'", "'=='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SKIP_WHITESPACES", "RETURN_KEYWORD", "BOOL_TRUE", "BOOL_FALSE", 
			"WHILE", "NEW", "JAVA_PACKAGE", "JAVA_IMPORT", "CLASS", "EXTENDS", "IMPLEMENTS", 
			"ACCESS_MODIFIER", "STATIC", "FINAL", "WORD", "INT", "ASSIGN", "SEMICOLON", 
			"LBRACKET", "RBRACKET", "COMMA", "QUOTE", "DOT", "LEFT_BRACE", "RIGHT_BRACE", 
			"LE", "GR", "EQ", "LEQ", "GEQ"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JavaProgram.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavaProgramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public String str;
		public Java_packageContext java_package;
		public Java_importsContext java_imports;
		public Class_definitionContext class_definition;
		public Java_packageContext java_package() {
			return getRuleContext(Java_packageContext.class,0);
		}
		public Class_definitionContext class_definition() {
			return getRuleContext(Class_definitionContext.class,0);
		}
		public List<Java_importsContext> java_imports() {
			return getRuleContexts(Java_importsContext.class);
		}
		public Java_importsContext java_imports(int i) {
			return getRuleContext(Java_importsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		((ProgramContext)_localctx).str =  "";
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			((ProgramContext)_localctx).java_package = java_package();
			_localctx.str += ((ProgramContext)_localctx).java_package.str + "<br>\n";
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==JAVA_IMPORT) {
				{
				{
				setState(56);
				((ProgramContext)_localctx).java_imports = java_imports();
				_localctx.str += ((ProgramContext)_localctx).java_imports.str;
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			((ProgramContext)_localctx).class_definition = class_definition();
			_localctx.str += "<br>\n" + ((ProgramContext)_localctx).class_definition.str;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Java_packageContext extends ParserRuleContext {
		public String str;
		public Token JAVA_PACKAGE;
		public Token x;
		public Token DOT;
		public Token y;
		public Token SEMICOLON;
		public TerminalNode JAVA_PACKAGE() { return getToken(JavaProgramParser.JAVA_PACKAGE, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaProgramParser.SEMICOLON, 0); }
		public List<TerminalNode> WORD() { return getTokens(JavaProgramParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(JavaProgramParser.WORD, i);
		}
		public List<TerminalNode> DOT() { return getTokens(JavaProgramParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(JavaProgramParser.DOT, i);
		}
		public Java_packageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_java_package; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterJava_package(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitJava_package(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitJava_package(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Java_packageContext java_package() throws RecognitionException {
		Java_packageContext _localctx = new Java_packageContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_java_package);
		((Java_packageContext)_localctx).str =  "";
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			((Java_packageContext)_localctx).JAVA_PACKAGE = match(JAVA_PACKAGE);
			_localctx.str += "<span style=\"color: blue\">" + (((Java_packageContext)_localctx).JAVA_PACKAGE!=null?((Java_packageContext)_localctx).JAVA_PACKAGE.getText():null) + "</span>";
			setState(69);
			((Java_packageContext)_localctx).x = match(WORD);
			_localctx.str += " " + (((Java_packageContext)_localctx).x!=null?((Java_packageContext)_localctx).x.getText():null);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(71);
				((Java_packageContext)_localctx).DOT = match(DOT);
				setState(72);
				((Java_packageContext)_localctx).y = match(WORD);
				_localctx.str += (((Java_packageContext)_localctx).DOT!=null?((Java_packageContext)_localctx).DOT.getText():null) + (((Java_packageContext)_localctx).y!=null?((Java_packageContext)_localctx).y.getText():null);
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			((Java_packageContext)_localctx).SEMICOLON = match(SEMICOLON);
			_localctx.str += (((Java_packageContext)_localctx).SEMICOLON!=null?((Java_packageContext)_localctx).SEMICOLON.getText():null) + "<br>\n";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Java_importsContext extends ParserRuleContext {
		public String str;
		public Token JAVA_IMPORT;
		public Token x;
		public Token DOT;
		public Token y;
		public Token SEMICOLON;
		public TerminalNode JAVA_IMPORT() { return getToken(JavaProgramParser.JAVA_IMPORT, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaProgramParser.SEMICOLON, 0); }
		public List<TerminalNode> WORD() { return getTokens(JavaProgramParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(JavaProgramParser.WORD, i);
		}
		public List<TerminalNode> DOT() { return getTokens(JavaProgramParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(JavaProgramParser.DOT, i);
		}
		public Java_importsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_java_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterJava_imports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitJava_imports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitJava_imports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Java_importsContext java_imports() throws RecognitionException {
		Java_importsContext _localctx = new Java_importsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_java_imports);
		((Java_importsContext)_localctx).str =  "";
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((Java_importsContext)_localctx).JAVA_IMPORT = match(JAVA_IMPORT);
			_localctx.str += "<span style=\"color: blue\">" + (((Java_importsContext)_localctx).JAVA_IMPORT!=null?((Java_importsContext)_localctx).JAVA_IMPORT.getText():null) + "</span>";
			setState(84);
			((Java_importsContext)_localctx).x = match(WORD);
			_localctx.str += " " + (((Java_importsContext)_localctx).x!=null?((Java_importsContext)_localctx).x.getText():null);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(86);
				((Java_importsContext)_localctx).DOT = match(DOT);
				setState(87);
				((Java_importsContext)_localctx).y = match(WORD);
				_localctx.str += (((Java_importsContext)_localctx).DOT!=null?((Java_importsContext)_localctx).DOT.getText():null) + (((Java_importsContext)_localctx).y!=null?((Java_importsContext)_localctx).y.getText():null);
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			((Java_importsContext)_localctx).SEMICOLON = match(SEMICOLON);
			_localctx.str += (((Java_importsContext)_localctx).SEMICOLON!=null?((Java_importsContext)_localctx).SEMICOLON.getText():null) + "<br>\n";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_definitionContext extends ParserRuleContext {
		public String str;
		public Acceess_modifierContext acceess_modifier;
		public Token CLASS;
		public Token WORD;
		public Java_extendsContext java_extends;
		public Java_implementsContext java_implements;
		public Token LEFT_BRACE;
		public Class_bodyContext class_body;
		public Token RIGHT_BRACE;
		public TerminalNode CLASS() { return getToken(JavaProgramParser.CLASS, 0); }
		public TerminalNode WORD() { return getToken(JavaProgramParser.WORD, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(JavaProgramParser.LEFT_BRACE, 0); }
		public Class_bodyContext class_body() {
			return getRuleContext(Class_bodyContext.class,0);
		}
		public TerminalNode RIGHT_BRACE() { return getToken(JavaProgramParser.RIGHT_BRACE, 0); }
		public Acceess_modifierContext acceess_modifier() {
			return getRuleContext(Acceess_modifierContext.class,0);
		}
		public Java_extendsContext java_extends() {
			return getRuleContext(Java_extendsContext.class,0);
		}
		public Java_implementsContext java_implements() {
			return getRuleContext(Java_implementsContext.class,0);
		}
		public Class_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterClass_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitClass_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitClass_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_definitionContext class_definition() throws RecognitionException {
		Class_definitionContext _localctx = new Class_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_definition);
		((Class_definitionContext)_localctx).str =  "";
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ACCESS_MODIFIER) {
				{
				setState(97);
				((Class_definitionContext)_localctx).acceess_modifier = acceess_modifier();
				_localctx.str += ((Class_definitionContext)_localctx).acceess_modifier.str + " ";
				}
			}

			setState(102);
			((Class_definitionContext)_localctx).CLASS = match(CLASS);
			_localctx.str += "<span style=\"color: blue\">" + (((Class_definitionContext)_localctx).CLASS!=null?((Class_definitionContext)_localctx).CLASS.getText():null) + "</span>";
			setState(104);
			((Class_definitionContext)_localctx).WORD = match(WORD);
			_localctx.str += " " + (((Class_definitionContext)_localctx).WORD!=null?((Class_definitionContext)_localctx).WORD.getText():null);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(106);
				((Class_definitionContext)_localctx).java_extends = java_extends();
				_localctx.str += " " + ((Class_definitionContext)_localctx).java_extends.str;
				}
			}

			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPLEMENTS) {
				{
				setState(111);
				((Class_definitionContext)_localctx).java_implements = java_implements();
				_localctx.str += " " + ((Class_definitionContext)_localctx).java_implements.str;
				}
			}

			setState(116);
			((Class_definitionContext)_localctx).LEFT_BRACE = match(LEFT_BRACE);
			setState(117);
			((Class_definitionContext)_localctx).class_body = class_body(4);
			setState(118);
			((Class_definitionContext)_localctx).RIGHT_BRACE = match(RIGHT_BRACE);
			_localctx.str += " " + (((Class_definitionContext)_localctx).LEFT_BRACE!=null?((Class_definitionContext)_localctx).LEFT_BRACE.getText():null) + "<br>\n" + ((Class_definitionContext)_localctx).class_body.str + (((Class_definitionContext)_localctx).RIGHT_BRACE!=null?((Class_definitionContext)_localctx).RIGHT_BRACE.getText():null) + "<br>\n";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Java_extendsContext extends ParserRuleContext {
		public String str;
		public Token EXTENDS;
		public Token x;
		public TerminalNode EXTENDS() { return getToken(JavaProgramParser.EXTENDS, 0); }
		public TerminalNode WORD() { return getToken(JavaProgramParser.WORD, 0); }
		public Java_extendsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_java_extends; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterJava_extends(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitJava_extends(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitJava_extends(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Java_extendsContext java_extends() throws RecognitionException {
		Java_extendsContext _localctx = new Java_extendsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_java_extends);
		((Java_extendsContext)_localctx).str =  "";
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			((Java_extendsContext)_localctx).EXTENDS = match(EXTENDS);
			setState(122);
			((Java_extendsContext)_localctx).x = match(WORD);
			_localctx.str += (((Java_extendsContext)_localctx).EXTENDS!=null?((Java_extendsContext)_localctx).EXTENDS.getText():null) + " " +
			            "<span style=\"color: blue\">" + (((Java_extendsContext)_localctx).x!=null?((Java_extendsContext)_localctx).x.getText():null) + "</span>";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Java_implementsContext extends ParserRuleContext {
		public String str;
		public Token IMPLEMENTS;
		public Token x;
		public Token COMMA;
		public Token y;
		public TerminalNode IMPLEMENTS() { return getToken(JavaProgramParser.IMPLEMENTS, 0); }
		public List<TerminalNode> WORD() { return getTokens(JavaProgramParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(JavaProgramParser.WORD, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JavaProgramParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JavaProgramParser.COMMA, i);
		}
		public Java_implementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_java_implements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).enterJava_implements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaProgramListener ) ((JavaProgramListener)listener).exitJava_implements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaProgramVisitor ) return ((JavaProgramVisitor<? extends T>)visitor).visitJava_implements(this);
			else return visitor.visitChildren(this);
		}
	}
